# niri-quickshell

./: .gitignore  flake.nix
backend/: Cargo.toml  build.rs
backend/src/: ipc.rs  main.rs  shell_state_generated.rs  state_store.rs
backend/src/modules/: audio.rs  battery.rs  config.rs  exporter.rs  mod.rs  network.rs  niri.rs  theme.rs
config/niri-quickshell/: theme.toml
config/niri-quickshell/fuzzel/: colors.ini  fuzzel.ini
config/niri-quickshell/ghostty/: colors
config/niri-quickshell/niri/: colors.kdl
config/niri-quickshell/themes/: light.toml
frontend/: CMakeLists.txt
frontend/plugin/: IpcClient.cpp  IpcClient.h  ShellStateStore.cpp  ShellStateStore.h  SocketReader.cpp  SocketReader.h  client_command_generated.h  shell_state_generated.h
frontend/ui/: ControlCenterMenu.qml  SystemTray.qml  Theme.qml  WorkspaceNav.qml  qmldir  shell.qml
protocol/: client_command.fbs  client_command_generated.h  client_command_generated.rs  shell_state.fbs  shell_state_generated.h  shell_state_generated.rs
