[package]
name = "niri-quickshell-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "niri-quickshell-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flatbuffers = "25.12.19"
zbus = "5.0"
futures-lite = "2.6"
libc = "0.2.184"
toml = "0.8"
notify = "6.1"
dirs = "5.0"
